[tool.poetry]
name = "pulpo"
version = "0.1.0"
description = ""
authors = ["Eduardo García Maleta <egmaleta@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pulp = "^2.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
